--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 <body>
   <nav class="navbar">
     <div class="container nav-inner">
-      <a class="brand" href="{{ url_for('index') }}">BeamClone</a>
+      <a class="brand" href="{{ url_for('index') }}">CareerSphere</a>
       <div class="nav-links">
         {% if current_user.is_authenticated %}
           <a href="{{ url_for('resumes.dashboard') }}">Dashboard</a>
